--- a/indedx.html
+++ b/indedx.html
@@ -1,13 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio website demo</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+
 </head>
+
 <body>
-    
+    <section class="top-banner">
+        <div class="half-width">
+            <h1>Welcome To </h1>
+            <h1><span class="color-orange">Hafiz Rasel</span> World</h1>
+            <h3>Create Exclusive things</h3>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestiae, fugiat blanditiis nobis similique
+                vel totam pariatur at quia quam ipsa rerum aliquid debitis neque laudantium provident consequatur!
+                Nobis, reiciendis quibusdam?</p>
+            <a class="button-hire" href="www.yearstech.com" target="_blank">Hire Me</a>
+        </div>
+        <div class="half-width">
+            <img src="images/jhankar.png" alt="">
+        </div>
+    </section>
+    <section class="dream-big">
+        <div class="half-width">
+            <img src="images/jhankar2.png" alt="">
+        </div>
+        <div class="half-width">
+            <h1>Dream Big</h1>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Molestiae labore qui asperiores! Aliquam,
+                adipisci quidem vero modi amet cum, eum laboriosam placeat cupiditate non vel molestias quisquam
+                perspiciatis velit! Minus?</p>
+            <a class="button-hire" href="facebook.com">Download Resume</a>
+        </div>
+    </section>
+
 </body>
+
 </html>
