--- a/indedx.html
+++ b/indedx.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <section class="top-banner">
+    <section class="top-banner felxible-container">
         <div class="half-width">
             <h1>Welcome To </h1>
             <h1><span class="color-orange">Hafiz Rasel</span> World</h1>
@@ -28,7 +28,7 @@
             <img src="images/jhankar.png" alt="">
         </div>
     </section>
-    <section class="dream-big">
+    <section class="dream-big felxible-container">
         <div class="half-width">
             <img src="images/jhankar2.png" alt="">
         </div>
@@ -41,6 +41,33 @@
         </div>
     </section>
 
+    <section class="experience-area">
+        <h1>Experiences</h1>
+        <div class="felxible-container">
+            <div id="stack-developer" class="experience-item">
+                <h2>Full stack Developer</h2>
+                <h3 class="color-orange">2021-20122 | Pro level Developer</h3>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eum tempora quae ullam dignissimos officia
+                    consectetur nostrum, ipsa veritatis nesciunt totam at odio rem maxime, ea quos error obcaecati
+                    beatae
+                    culpa!</p>
+
+            </div>
+            <div id="hero-developer" class="experience-item">
+                <h2>Baby Developer</h2>
+                <h3 class="color-orange">2021-20122 | hero learner Developer</h3>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eum tempora quae ullam dignissimos officia
+                    consectetur nostrum, ipsa veritatis nesciunt totam at odio rem maxime, ea quos error obcaecati
+                    beatae
+                    culpa!</p>
+
+            </div>
+        </div>
+    </section>
+
 </body>
+<footer>
+    <p>&copy; Hafiz 2023, a programmer</p>
+</footer>
 
 </html>
